# dpp-backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 16cf77f5a35c_add_is_active.py
app/: constants.py  main.py  script_.py
app/configs/: config.py  roles.py
app/db/: database_postgre.py
app/models/: dpp.py  user.py
app/routers/: auth.py  dpp_export.py  dpp_file.py  dpp_json.py  dpp_sparql.py  system.py  user.py
app/schemas/: dpp.py  dpp_sparql.py  user.py
app/utils/: auth.py  dpp_search_engine.py  generic_extractor.py  jwt_handler.py  logger.py  rdf_converter.py  security.py  sparql_client.py  validation.py
monitoring/: promtail-config.yaml
scripts/: README.md  check_graph.py  inspect_fuseki.py  seed_aas_data.py  seed_demo_data.py  seed_extra_data.py  sync_all_to_fuseki.py  test_connection.py  test_fuseki.py
tests/: conftest.py  test_e2e_scenarios.py  test_unit_security.py
uploads/aasx/BatteryAAS/aasx/: data.xml
