[tool.poetry]
name = "dpp-backend"
version = "0.1.0"
description = "Digital Product Passport Management Backend"
authors = ["Zoe Levesanou <zoe@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = { extras = ["standard"], version = ">=0.37.0,<0.38.0" }
pydantic-settings = ">=2.11.0,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
email-validator = ">=2.3.0,<3.0.0"
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
bcrypt = "==3.2.2"
xmltodict = ">=1.0.2,<2.0.0"
loguru = ">=0.7.3,<0.8.0"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
reportlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
flake8 = ">=7.3.0,<8.0.0"
pytest = ">=8.4.2,<9.0.0"
httpx = ">=0.28.1,<0.29.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
